changed date format, added showNotActive sulla api/partners, updated openapi
